<resources>
    <string name="app_name">Peluqueria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre Usuario</string>
    <string name="nav_header_subtitle">Nombre Usuario</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="search">search</string>
    <string name="edit">Editar</string>
    <string name="delate">Eliminar</string>
    <string name="action_settings">Serrar Cesion</string>delete


    <string name="menu_home">Home</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_domicilio">Servicio a Domicilio</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_contacto">Contactanos</string>
    <string name="menu_salir">Cerrar Cesion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_persona">Profesional</string>
    <string name="title_activity_main_register">Registro</string>
    <string name="title_activity_main_admin">Admin</string>
    <string name="title_activity_main_olvide_password">Restablecer Password</string>
    <string name="title_activity_main_olvide_pasword">MainActivityOlvidePasword</string>
    <string name="title_activity_admin">Admin</string>
    <string name="title_activity_map">Geolocalizacion</string>

    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>

    <string-array name="peluqueriaList">
        <item>Selecciona una op...</item>
        <item>Pedir a Domicilio</item>
        <item>Agendar un el cervicio</item>

    </string-array>

    <array name="opciones">
        <item name="servicios">Cortes Cabello</item>
        <item name="servicios">Planchado</item>
        <item name="servicios">Depilaje</item>
        <item name="servicios">Maniquiw</item>
        <item name="servicios">Pediquiw</item>

    </array>
    <string name="title_activity_login">Peluqueria</string>
    <string name="prompt_email">Email</string>
    <string name="phone">Telefono</string>
    <string name="name_completo">Nombre Completo</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_olvidarpassword">Olvide mi password</string>
    <string name="action_register_guardar">Registrar</string>
    <string name="action_restablecer">Restablecer</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="pause">"pause"</string>
    <string name="resume">"resume"</string>

    <string name="title_personas">Personas</string>
    <string name="title_servicio">Servicios</string>
    <string name="title_citas">Citas</string>
    <string name="title_domicilio">Domicilios</string>

</resources>
