<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
     >

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/menu_agenda" />
        <item
            android:id="@+id/nav_domicilios"
            android:icon="@drawable/ic_room_service_black_24dp"
            android:title="@string/menu_domicilio" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contacto"
                android:icon="@drawable/ic_contact_phone_black_24dp"
                android:title="@string/menu_contacto" />
            <item
                android:id="@+id/nav_serrar"
                android:icon="@drawable/ic_close_black_24dp"
                android:title="@string/menu_salir" />
        </menu>
    </item>

</menu>
