<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context=".ui.login.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="61dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="171dp"
                android:layout_height="159dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon1"
                app:civ_border_color="#C4CACA"
                app:civ_border_width="1dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:srcCompat="@drawable/ic_person_24px"
                    tools:ignore="VectorDrawableCompat" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:srcCompat="@android:drawable/ic_secure" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="36dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone" />


            <Button
                android:id="@+id/login"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
               android:layout_marginTop="30dp"
                android:background="#63A9EC"
                android:enabled="true"
                android:text="@string/action_sign_in"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btnOlvidarpasswor"
                    android:layout_width="202dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="@string/action_olvidarpassword"
                    android:textColor="#F14210"
                    android:textSize="15dp" />


                <Button
                    android:id="@+id/buttonRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="#E9EDEE"
                    android:gravity="center"
                    android:text="@string/action_register"
                    android:textColor="#F14210"
                    android:textSize="15dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>